--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -2,7 +2,7 @@
 @font-face {
     font-family: "Jakarta Sans";
     src: 
-    url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Bold.woff'),
+    url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Regular.woff'),
     url('../fonts/PlusJakarta_Sans-2.5/static/PlusJakartaSans-Regular.ttf'),
     url('../fonts/PlusJakarta_Sans-2.5/webfonts/PlusJakartaSans-Regular.woff2');
     font-weight: normal;
@@ -60,24 +60,10 @@ h5 {
     font-size: 0.7rem;
 }
 
-ul,
-li,
-a,
-input {
+.smallCopy {
+    font-size: 0.6rem;
+    font-weight: bold;
     margin: 0;
-    padding: 0;
+    line-height: 1.2rem;
 }
 
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-image {
-    max-width: 100%;
-    display: block;
-}
