--- a/styles/styles.css
+++ b/styles/styles.css
@@ -372,6 +372,7 @@ section {
 }
 
 .navBar {
+  background-color: #fff;
   position: sticky;
   top: 0;
   border-top: 1px solid rgba(8, 75, 109, 0.08);
@@ -387,6 +388,7 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 20px 0;
 }
 .navBar input[type=checkbox] {
   opacity: 0;
@@ -397,17 +399,41 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .searchCart .menuIcon,
 .searchCart .bag {
   margin-right: 15px;
+}
+.searchCart .menuIcon {
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
 .searchCart .bag {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+.searchCart .counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.searchCart .counter p {
+  width: 24px;
+  height: 24px;
+  background-color: #084b6d;
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+}
 
 .slideOutNav {
-  display: none;
+  background-color: #084b6d;
 }
