--- a/styles/styles.css
+++ b/styles/styles.css
@@ -326,6 +326,13 @@ section {
   margin-bottom: 90px;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
 .button {
   padding: 18px 36px;
   border: 2px solid #084b6d;
@@ -394,23 +401,26 @@ section {
   opacity: 0;
   position: absolute;
 }
+.navBar input[type=checkbox]:checked ~ .slideOutNav {
+  left: 0;
+}
+.navBar .menuButton {
+  cursor: pointer;
+}
 
 .searchCart {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 .searchCart .menuIcon,
 .searchCart .bag {
   margin-right: 15px;
 }
 .searchCart .menuIcon {
-  background-color: transparent;
-  border: none;
-  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 .searchCart .bag {
   display: -webkit-box;
@@ -436,4 +446,44 @@ section {
 
 .slideOutNav {
   background-color: #084b6d;
+  position: fixed;
+  top: 0;
+  left: -506px;
+  height: 100vh;
+  width: 100%;
+  max-width: 506px;
+  padding: 35px 50px;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 10;
+}
+
+.mainMenu a {
+  font-family: "Young Serif";
+  font-size: 1.6rem;
+  line-height: 2.5rem;
+  color: white;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.mainMenu a:hover, .mainMenu a:focus {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.menuClose {
+  color: #fff;
+  font-size: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
