--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -30,6 +30,13 @@ section {
     margin-bottom: 90px;
 }
 
+button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
 .button {
     padding: 18px 36px;
     border: 2px solid $primary;
