--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -49,7 +49,12 @@ h2 {
 }
 
 h3 {
-    font-size: 2.7rem;
+    // font-size: 2.7rem;
+    font-size: 0.7rem;
+    letter-spacing: 0.15rem;
+    text-transform: uppercase;
+    font-family: $bodyFont;
+    font-weight: bold;
 }
 
 h4 {
