--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -1,4 +1,7 @@
 //categories
+.categories {
+    margin: 90px;
+}
 .categoryList {
     display: flex;
     justify-content: center;
@@ -42,3 +45,26 @@
 }
 
 //let them play
+.play {
+    background-image: url(../assets/background-image.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 90vh;
+
+    .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        //👇 setting a height allows us to align it vertically
+        min-height: 90vh; //👈90vh because we want it as big as the .play min-height
+
+        .playContainer {
+            width: 60%;
+            border: 24px solid $secondary;
+            background-color: $solidWhite;
+            padding: 60px;
+            text-align: center;
+        }
+    }
+}
