--- a/styles/styles.css
+++ b/styles/styles.css
@@ -516,6 +516,10 @@ header .wrapper {
   width: 48%;
 }
 
+.categories {
+  margin: 90px;
+}
+
 .categoryList {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -554,4 +558,31 @@ header .wrapper {
 }
 .categoryList .itemFour {
   background-color: #fff5f5;
+}
+
+.play {
+  background-image: url(../assets/background-image.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 90vh;
+}
+.play .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 90vh;
+}
+.play .wrapper .playContainer {
+  width: 60%;
+  border: 24px solid #f4fcff;
+  background-color: #fff;
+  padding: 60px;
+  text-align: center;
 }
