--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -63,6 +63,10 @@ h4 {
 
 h5 {
     font-size: 0.7rem;
+    color: $solidWhite;
+    font-family: $bodyFont;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 .smallCopy {
