--- a/styles/styles.css
+++ b/styles/styles.css
@@ -289,6 +289,10 @@ h4 {
 
 h5 {
   font-size: 0.7rem;
+  color: #fff;
+  font-family: "Jakarta Sans";
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .smallCopy {
@@ -566,6 +570,7 @@ header .wrapper {
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 90vh;
+  margin-bottom: 0;
 }
 .play .wrapper {
   display: -webkit-box;
@@ -577,7 +582,7 @@ header .wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 90vh;
+  min-height: inherit;
 }
 .play .wrapper .playContainer {
   width: 60%;
@@ -585,4 +590,47 @@ header .wrapper {
   background-color: #fff;
   padding: 60px;
   text-align: center;
+}
+
+footer {
+  background: #084b6d;
+  color: #fff;
+  padding: 75px;
+}
+footer .footerFlexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footerLogo h4 {
+  color: #fff;
+}
+
+.footerNav {
+  width: 40%;
+}
+.footerNav nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 25px;
+}
+.social i {
+  margin: 0 10px;
 }
