added forms html on contact pg

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -20,6 +20,10 @@ footer {
         display: flex;
         justify-content: space-between;
     }
+
+    h5 {
+        color: $solidWhite;
+    }
 }
 
 .social {
