--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -18,3 +18,30 @@ header .wrapper {
 
 //put container over text, margin auto, center it, etc?
 
+//////////////////////////////////////
+
+//CONTACT PAGE
+.contactHeader {
+    background: $quaternary;
+    padding-top: 120px;
+}
+
+.contactHeader .wrapper {
+    flex-direction: column;
+    margin: 0 auto;
+    padding-bottom: 50px;
+}
+
+// 👇 create some cute wavy bg pattern
+    //📝pseudo elements are considered inline elements by default
+.contactHeader::after {
+    content: '';
+    width: 100%;
+    height: 150px;
+    background-image: url(../assets/wave.svg);
+                    //👇width/height (same size as the parent)
+    background-size: 100% 150px;
+    background-color: $quaternary;
+    display: block;
+    background-repeat: no-repeat;
+}
