--- a/styles/styles.css
+++ b/styles/styles.css
@@ -514,6 +514,31 @@ header .wrapper {
   width: 48%;
 }
 
+.contactHeader {
+  background: #fff5f5;
+  padding-top: 120px;
+}
+
+.contactHeader .wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
+
+.contactHeader::after {
+  content: "";
+  width: 100%;
+  height: 150px;
+  background-image: url(../assets/wave.svg);
+  background-size: 100% 150px;
+  background-color: #fff5f5;
+  display: block;
+  background-repeat: no-repeat;
+}
+
 .categories {
   margin: 90px;
 }
